# dbt-core-bigquery

./: .gitignore  .user.yml  README.md  dbt_project.yml  pyproject.toml
seeds/: raw_stores.csv
snapshots/: stores_snapshot.sql
